// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Space /> when Space rendered match snapshot 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  width: 20px;
}

<div>
  <div
    class="emotion-0"
    data-testid="space"
  />
</div>
`;

exports[`<Space /> when hidden Space rendered match snapshot 1`] = `
.emotion-0 {
  display: none;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
}

<div>
  <div
    class="emotion-0"
    data-testid="space"
  />
</div>
`;
